log
Wed 03 May 2023 02:52:05 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|5
total_score: 0/70
636c07f
Wed 03 May 2023 03:20:50 PM UTC: 
 sudoku.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
b919255
Wed 03 May 2023 03:21:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d17ffca
Wed 03 May 2023 03:22:39 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
d7b6041
Wed 03 May 2023 03:24:15 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
2cbdddd
Wed 03 May 2023 03:24:44 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
48d6f32
Wed 03 May 2023 03:27:15 PM UTC: 
 sudoku.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
a8da185
Wed 03 May 2023 04:06:46 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:27: error: ‘j’ undeclared (first use in this function)
   59 |           if(aux->sudo[i][j] == k){
      |                           ^
sudoku.c:59:27: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:51:7: error: unused variable ‘submatriz’ [-Werror=unused-variable]
   51 |   int submatriz[9] = {0};
      |       ^~~~~~~~~
sudoku.c:50:7: error: variable ‘columnas’ set but not used [-Werror=unused-but-set-variable]
   50 |   int columnas[9] = {0};
      |       ^~~~~~~~
sudoku.c:49:7: error: variable ‘filas’ set but not used [-Werror=unused-but-set-variable]
   49 |   int filas[9] = {0};
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
baf953f
Wed 03 May 2023 07:30:05 PM UTC: 
 sudoku.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:7: error: unused variable ‘submatriz’ [-Werror=unused-variable]
   51 |   int submatriz[3][3];
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aaeb2bb
Wed 03 May 2023 07:31:09 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4861f5f
Fri 05 May 2023 03:10:10 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
05b1bca
Fri 05 May 2023 03:10:52 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
2758b2e
Fri 05 May 2023 03:11:31 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
8d1b87f
Fri 05 May 2023 06:54:18 PM UTC: 
 sudoku.c | 51 ++++++++++++++++++++++++++++++---------------------
 1 file changed, 30 insertions(+), 21 deletions(-)
 tests:  3|4
total_score: 20/70
0a75934
Fri 05 May 2023 06:59:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2b77fc5
Fri 05 May 2023 07:01:35 PM UTC: 
 sudoku.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  3|4
total_score: 20/70
e5b8f30
Fri 05 May 2023 07:05:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:21: error: ‘j’ undeclared (first use in this function)
   57 |       if(n->sudo[i][j] != 0){
      |                     ^
sudoku.c:57:21: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:52:9: error: variable ‘columnas’ set but not used [-Werror=unused-but-set-variable]
   52 |     int columnas[10] = {0};
      |         ^~~~~~~~
sudoku.c:51:9: error: variable ‘filas’ set but not used [-Werror=unused-but-set-variable]
   51 |     int filas[10] = {0};
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
5a722d1
Fri 05 May 2023 07:05:29 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
f47f59f
Fri 05 May 2023 07:09:56 PM UTC: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  5|3
total_score: 35/70
7054bcd
Fri 05 May 2023 07:25:31 PM UTC: 
 sudoku.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
174c646
Fri 05 May 2023 07:36:22 PM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:125:7: error: ‘i’ undeclared (first use in this function)
  125 |   for(i = 0 ; i < 9 ; i++){
      |       ^
sudoku.c:125:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:126:9: error: ‘j’ undeclared (first use in this function)
  126 |     for(j = 0 ; j < 9 ; j++){
      |         ^
Compilation failed
4b8f5d7
